@@ -22,5 +22,6 @@ set CLASSPATH=dist\argonms.jar;dist\bcprov-jdk15.jar;dist\js.jar;dist\mysql-conn
 java -Xmx600m -Dargonms.center.config.file=center.properties ^
 -Djava.util.logging.config.file=logging.properties ^
 -Dargonms.db.config.file=db.properties ^
+-Dargonms.ct.macbanblacklist.file=macbanblacklist.txt ^
 argonms.center.CenterServer
 pause
